<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subititulo_uno"
            android:title="Opciones">
            <menu>
                <item
                    android:id="@+id/addOption"
                    android:icon="@drawable/ic_baseline_person_add_24"
                    android:title="@string/add" />
                <item
                    android:id="@+id/listOption"
                    android:icon="@drawable/ic_baseline_format_list_numbered_24"
                    android:title="@string/list" />
                <item
                    android:id="@+id/searchOption"
                    android:icon="@drawable/ic_baseline_person_search_24"
                    android:title="@string/search" />
                <item
                    android:id="@+id/deleteOption"
                    android:icon="@drawable/ic_baseline_delete_forever_24"
                    android:title="@string/delete" />
            </menu>
        </item>
    </group>
</menu>
